syntax = "proto3";

package auth_v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/sborsh1kmusora/auth/pkg/access_v1;access_v1";

service AccessV1 {
  rpc Check (CheckRequest) returns (google.protobuf.Empty);
}

message CheckRequest {
  string endpoint_address = 1;
}