syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "github.com/sborsh1kmusora/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Update (UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
  UserInfo user_info = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  int64 id = 1;
  optional string username = 2 [(validate.rules).string = {
    min_len: 4,
    max_len: 32,
  }];
  optional string password = 3 [(validate.rules).string = {
    min_len: 8,
    max_len: 32,
  }];
}

message DeleteRequest {
  int64 id = 1;
}

enum Role {
  USER = 0;
  ADMIN = 1;
}

message UserInfo {
  string username = 1 [(validate.rules).string = {
    min_len: 4,
    max_len: 32,
  }];
  string password = 2 [(validate.rules).string = {
    min_len: 8,
    max_len: 32,
  }];
  Role role = 3 [(validate.rules).enum = {
    in: [0, 1]
  }];
}

message User {
  int64 id = 1;
  UserInfo user_info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}
